fixed bug where location data needed to fail or grant access before anything would show. removed all inline styling. removed unnecessary files. put max-width on the main card to not be too wide with larger viewports.

--- a/assets/css/brand-styles.css
+++ b/assets/css/brand-styles.css
@@ -52,7 +52,7 @@ body {
   justify-content: center;
 }
 
-.flex-container > div {
+.flex-container>div {
   font-family: var(--ffamily);
   background-color: var(--primary-color);
   width: 270px;
@@ -87,7 +87,7 @@ body {
   justify-content: space-around;
 }
 
-.flex-container-foot > div {
+.flex-container-foot>div {
   font-family: var(--ffamily);
   background-color: var(--secondary-color);
   /*width: 50%;*/
@@ -120,6 +120,7 @@ body {
 
 .icons-style {
   border-radius: 50%;
+  padding-top: 0;
 }
 
 .icons-style img {
@@ -154,7 +155,7 @@ input {
   line-height: 35px;
 }
 
-.main-flex-container > div {
+.main-flex-container>div {
   /*background-color: var(--secondary-color);*/
 
   width: 100px;
@@ -165,7 +166,7 @@ input {
   border-radius: 5px;
 }
 
-.main-flex-container-inner > div {
+.main-flex-container-inner>div {
   background-color: #00b6a1fe;
   width: 100px;
   margin-left: 1px;
@@ -176,7 +177,7 @@ input {
   color: white;
 }
 
-.main-flex-container-inner > .main-deets-font {
+.main-flex-container-inner>.main-deets-font {
   font-size: 14px;
   font-weight: bold;
   /*color: var(--secondary-color)*/
@@ -190,6 +191,7 @@ input {
 .main-flex-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .main-flex-container-inner {
@@ -197,7 +199,7 @@ input {
   flex-wrap: wrap;
 }
 
-.main-flex-container-inner > div {
+.main-flex-container-inner>div {
   background-color: var(--accent-color);
   width: 100px;
   margin-left: 1px;
@@ -210,6 +212,7 @@ input {
 
 .card-main {
   width: 80%;
+  max-width: 450px;
   height: 80%;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
@@ -270,6 +273,11 @@ input {
   /* background-color: var(--backgrd-color); */
 }
 
+.carousel-main {
+  text-align: center;
+  margin-top: 10px;
+}
+
 .carousel-indicators [data-bs-target] {
   box-sizing: content-box;
   flex: 0 1 auto;
@@ -287,6 +295,8 @@ input {
   border-bottom: 10px solid transparent;
   opacity: 0.5;
   transition: opacity 0.9s ease;
+  position: static;
+  display: inline-block;
 }
 
 .carousel-control-next,
@@ -328,6 +338,7 @@ input {
   width: 18rem;
   margin: 0 10px;
 }
+
 .cardir {
   width: 100%;
   height: 400px;
@@ -371,6 +382,7 @@ input {
   display: block;
   z-index: 1;
 }
+
 .carousel-indicators [data-bs-target] {
   background-color: var(--secondary-color);
   border-radius: 50%;
@@ -422,7 +434,8 @@ input {
   border-radius: 10px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   color: var(--accent-color);
-  height: 195px; /* Fixed height */
+  height: 195px;
+  /* Fixed height */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
